changed script src and title and description

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Star Battles</title>
-  <meta name="description" content="Spacecraft fighting it out">
-  <meta name="author" content="Kevin Isom">
+  <title>Game</title>
+  <meta name="description" content="Game">
+  <meta name="author" content="Your Name Here">
  
 </head>
 
 <body>
-  <script src="js/start.js"></script>
+  <script src="js/game.js"></script>
 </body>
 </html>
